--- a/bds06/src/main/resources/application.properties
+++ b/bds06/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.profiles.active=${APP_PROFILE:test}
 
 spring.jpa.open-in-view=false
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 security.oauth2.client.client-id=${CLIENT_ID:myclientid}
 security.oauth2.client.client-secret=${CLIENT_SECRET:myclientsecret}
